--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           EXT=""
           if [ "$GOOS" = "windows" ]; then EXT=".exe"; fi
-          OUT="dorectory-watcher-${GOOS}-${GOARCH}${EXT}"
+          OUT="directory-watcher-${GOOS}-${GOARCH}${EXT}"
           echo "🔨 Building $OUT"
           go build -o "$OUT"
 
